--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <section class="hero">
         <h1>EMPOWERING FEEDBACK,<br>Elevating Teaching Excellence</h1>
         <p>Evaluate faculty performance anytime, anywhere. With an easy-to-use interface, students can share valuable feedback, and administrators can generate reports in just a few clicks.</p>
-        <a href="login.php" class="btn">GET STARTED</a>
+        <a href="login.html" class="btn">GET STARTED</a>
     </section>
 
     <footer>
